Changed the files so no more horizontal scrolling. Welcome screen is fixed so it displays the text where I want. The sites tabs have been made, need to fill them in

--- a/App/soil-monitor/styles/styles.css
+++ b/App/soil-monitor/styles/styles.css
@@ -8,6 +8,8 @@
     color: cornsilk;
     font-size: 1rem;
     line-height: 2rem;
+    overflow-x: hidden;
+    margin: 0;
 }
 
 .title_text {
